# Advanced_Trader

./: .gitignore  README.md  backtest.py  pyproject.toml  sentiment_analyzer.py  status.sh  trading_bot.py
ai_trading_bot_v3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: architecture.md  data_contracts.md  live_execution_notes.md  live_state_schema.md  live_trading_checklist.md  migration_from_original.md  openclaw_ops_design.md  openclaw_workspace_setup.md  runbook.md  v2_2_upgrade_notes.md  v2_3_upgrade_notes.md  v2_4_upgrade_notes.md  v2_5_upgrade_notes.md  v2_6_upgrade_notes.md  v2_7_upgrade_notes.md  v2_8_upgrade_notes.md  v2_9_upgrade_notes.md  v3_0_upgrade_notes.md  v3_1_upgrade_notes.md  v3_2_upgrade_notes.md  v3_3_upgrade_notes.md  v3_4_upgrade_notes.md  v3_5_upgrade_notes.md
jobs/: build_overnight_sentiment.py  export_review_playbooks.py  generate_guardrail_report.py  generate_operator_daily_report.py  generate_portfolio_regime_report.py  generate_session_policy_report.py  generate_shift_handoff.py  intraday_sentiment_refresh.py  monitor_runtime.py  pre_market_decision.py  reconcile_and_report_eod.py  request_operator_approval.py
scripts/: create_demo_data.py  migrate_original_repo.py
tests/: test_backtest.py  test_health.py  test_live_mapping.py  test_live_recovery.py  test_live_runner.py  test_live_state.py  test_original_migration.py  test_position_sizing.py  test_sentiment.py  test_sentiment_pipeline.py  test_strategy.py  test_v2_4_features.py  test_v2_5_features.py  test_v2_6_features.py  test_v2_7_features.py  test_v2_8_features.py  (+6 more)
(+80 files in other folders)
